# BioLLM

./: .gitignore  README.md  RUN_ON_4070.md  mvp.yaml  pyproject.toml
conf/: config.yaml
conf/benchmark/: instruction.yaml  ni8_pilot.yaml  toy.yaml
conf/consolidation/: default.yaml
conf/ewc/: default.yaml
conf/experts/: default.yaml
conf/logging/: wandb.yaml
conf/model/: hf_causal_lm.yaml  tiny_transformer.yaml
conf/replay/: default.yaml
conf/scheduler/: default.yaml
conf/train/: continual_pilot_4070.yaml  default.yaml  mac_dev.yaml  qwen_0_5b_12gb.yaml  rtx4070.yaml
data/: instruction_smoke.jsonl  instructions_eval.jsonl  instructions_train.jsonl
scripts/: build_instruction_files.py  build_ni_8task_pack.py  check_cuda.py  publish_continual_dashboard_wandb.py  publish_toy_sleep_comparison_wandb.py  run_continual_eval_suite.py  run_qwen_instruction_12gb.py  run_toy_sleep_ablation.py
src/biollm_cls/: __init__.py  cli.py  config.py  config_schema.py  logging.py  metrics_catalog.py  repro.py  train.py
tests/integration/: test_smoke_cls_cycle.py
tests/unit/: test_benchmark_task_eval.py  test_build_ni_8task_pack.py  test_config_schema.py  test_continual_metrics.py  test_ewc.py  test_hf_injection_split.py  test_instruction_benchmark.py  test_logging.py  test_metrics_catalog.py  test_model_factory.py  test_publish_continual_dashboard.py  test_refresh.py  test_replay_buffer.py  test_router_and_capacity.py  test_run_continual_eval_suite.py  test_scheduler.py  test_sleep.py  test_train_loss_safety.py  test_train_replay_diversity.py  test_utils.py
(+21 files in other folders)
